# AVStudyDemo2

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/avstudydemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log_utils.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavutil/: frame.h
app/src/main/cpp/player/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  DemoPlayer.cpp  DemoPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  MainPlayer.cpp  PlayerMain.cpp  VideoChannel.cpp  VideoChannel.h
app/src/main/java/com/example/avstudydemo2/: MainActivity.java
app/src/main/java/com/example/avstudydemo2/player/: DemoPlayer.java  DemoPlayerActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/avstudydemo2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jni/: com_example_avstudydemo2_player_DemoPlayer.h
